tests/ok/while-true-return-owner-state.ari
fn main() -> i64 {
  let token: own i64 = 5;
  while true {
    drop token;
    return 12;
  }
}
