tests/errors/block-expression-nonfinal-missing-semicolon.ari
fn main() -> i64 {
  let value = {
    identity(1)
    2
  };
  return value;
}

fn identity(value: i64) -> i64 {
  return value;
}
